# LexRag

./: .gitignore  api_router.py  config.py  pyproject.toml  rag_demo.py  readme.md
core/: bm25_index.py  cache.py  document_loader.py  embeddings.py  generator.py  metrics.py  query_classifier.py  reranker.py  retriever.py  text_splitter.py  vector_store.py
core/vectorstores/: __init__.py  factory.py  faiss_store.py  milvus_store.py  qdrant_store.py
docs/: knowledge_base_update.md  面试准备-项目分析与问答.md
eval/: __init__.py  benchmark.py  comparison_report.md  create_law_dataset.py  generate_comparison.py  gui_benchmark.py  ragas_dataset_sample.json  run_ragas_eval.py
features/: thinking_chain.py  web_search.py
utils/: network.py
